added MIME type validation in ExcelProcessorService to ensure only Excel files are processed